[package]
name = "vgebrev-first-crate"
version = "0.2.0"
authors = ["VeliG <vgebrev@gmail.com>"]
edition = "2018"
description = "Sample crate published while learning Rust using 'The Rust Programming Language' book"
license = "MIT"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
